Web Inspector: Grid overlay does not adjust for element inside iframes https://bugs.webkit.org/show_bug.cgi?id=222920

Reviewed by Simon Fraser.

Resolves an issue when overlays are applied to grids within iframes, which need to account for the
position/transform of their containing frame, and any other parent frames, to appear correctly in relation to
the root frame. This patch also has the side effect of changing how drawing the grid overlay while the page is
scrolled by allowing `localPointToRootPoint` to account for the scroll translation instead of explicitly
offsetting drawing by the scroll offset.

`Widget`, `ScrollView`, and `FrameView` are updated to retain floating-point precision where necessary.

* inspector/InspectorOverlay.cpp:
(WebCore::localPointToRootPoint):
- Use floating-point precision instead of integer precision.
(WebCore::InspectorOverlay::drawGridOverlay):
- Use `localPointToRootPoint` to calculate absolute points relative to a `renderGrid`'s parent hierarchy.
- Remove graphics context translation, as `localPointToRootPoint` will account for this translation.
* page/FrameView.cpp:
(WebCore::FrameView::convertFromRendererToContainingView const):
(WebCore::FrameView::convertToContainingView const):
* page/FrameView.h:
* platform/ScrollView.cpp:
(WebCore::ScrollView::contentsToView const):
* platform/ScrollView.h:
(WebCore::ScrollView::convertChildToSelf const):
* platform/Widget.cpp:
(WebCore::Widget::convertToContainingView const):


Canonical link: https://commits.webkit.org/235320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274464 268f45cc-cd09-0410-ab3c-d52691b4dbfc